# Fasty-AI-Project

./: CMakeLists.txt
config/: config.yaml
include/: Detection.hpp  FastyDetector.hpp  MenuSystem.hpp  NotificationSystem.hpp  TrackingSystem.hpp  VideoUtils.hpp  WaterLevelDetector.hpp
src/: Detection.cpp  FastyDetector.cpp  MenuSystem.cpp  NotificationSystem.cpp  TrackingSystem.cpp  VideoUtils.cpp  WaterLevelDetector.cpp  main.cpp
